--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"build": "tsc",
 		"dev": "tsc -w",
-		"start": "node ./dist/index.js"
+		"start": "node ./dist/src/index.js",
+		"lint": "eslint src --cache"
 	},
 	"author": "leo",
 	"license": "GPL-3.0",
@@ -19,7 +20,9 @@
 	},
 	"dependencies": {
 		"@discordjs/builders": "^0.15.0",
+		"chalk": "^4.1.2",
 		"discord.js": "^13.8.1",
-		"dotenv": "^12.0.4"
+		"dotenv": "^12.0.4",
+		"moment": "^2.29.3"
 	}
 }
