feat: slash commands registering & handling
and custom logging styles by config

--- a/config.json
+++ b/config.json
@@ -1,4 +1,12 @@
 {
 	"prefix": "!",
-	"developers": ["343563042866331648"]
+	"developers": ["343563042866331648"],
+	"slash": {
+		"scope": "global"
+	},
+	"console": {
+		"cmd": "blueBright",
+		"info": "yellow",
+		"warn": "yellow"
+	}
 }
